; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/sfc/falcon/extr_efx.c_ef4_remove_eventq.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/sfc/falcon/extr_efx.c_ef4_remove_eventq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ef4_channel = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@drv = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [28 x i8] c"chan %d remove event queue\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ef4_channel*)* @ef4_remove_eventq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ef4_remove_eventq(%struct.ef4_channel* %0) #0 {
  %2 = alloca %struct.ef4_channel*, align 8
  store %struct.ef4_channel* %0, %struct.ef4_channel** %2, align 8
  %3 = load %struct.ef4_channel*, %struct.ef4_channel** %2, align 8
  %4 = getelementptr inbounds %struct.ef4_channel, %struct.ef4_channel* %3, i32 0, i32 1
  %5 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %6 = load i32, i32* @drv, align 4
  %7 = load %struct.ef4_channel*, %struct.ef4_channel** %2, align 8
  %8 = getelementptr inbounds %struct.ef4_channel, %struct.ef4_channel* %7, i32 0, i32 1
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load %struct.ef4_channel*, %struct.ef4_channel** %2, align 8
  %13 = getelementptr inbounds %struct.ef4_channel, %struct.ef4_channel* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 8
  %15 = call i32 @netif_dbg(%struct.TYPE_2__* %5, i32 %6, i32 %11, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0), i32 %14)
  %16 = load %struct.ef4_channel*, %struct.ef4_channel** %2, align 8
  %17 = call i32 @ef4_nic_remove_eventq(%struct.ef4_channel* %16)
  ret void
}

declare dso_local i32 @netif_dbg(%struct.TYPE_2__*, i32, i32, i8*, i32) #1

declare dso_local i32 @ef4_nic_remove_eventq(%struct.ef4_channel*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
